[i18n] escape commas, polymer workaround

The Polymer binding parser treats commas and escaped commas as special.
This CL escapes commas so they are handled properly with Polymer.
(Without this CL the binding is ignored if an un-escaped comma is present).

BUG=705850

Review-Url: https://codereview.chromium.org/2818053002
Cr-Commit-Position: refs/heads/master@{#464753}

Former-commit-id: cdf55422a65db1c91c48ba50e952f9a1804bbb1a